# ScanSense

./: .gitignore  CMakeLists.txt  README.md  ScanSense.sln
src/: main.cpp
src/analysisManager/: AnalysisManager.cpp  AnalysisManager.h
src/analyzerFactory/: AnalyzerFactory.h
src/analyzers/: Analyzer.h  BugAnalyzer.h  SecurityAnalyzer.h
src/analyzers/CodeScanCateogories/BugAnalysis/: BugAnalyzer.cpp  BugAnalyzer.h
src/analyzers/CodeScanCateogories/BugAnalysis/SubAnalyzers/: SyntaxErrorAnalyzer.cpp  SyntaxErrorAnalyzer.h
src/analyzers/CodeScanCateogories/SecurityAnalysis/: SecurityAnalyzer.cpp  SecurityAnalyzer.h
src/shared/: AnalyzerTypes.h  Bug.h
